--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "cryptography>=46.0.3",
     "fastapi>=0.120.0",
+    "fido2[pcsc]>=2.0.0",
+    "rich>=14.2.0",
+    "typer[all]>=0.20.0",
     "uvicorn>=0.38.0",
 ]
